Added multiplication and division.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <div class="digit" id="7">7</div>
                 <div class="digit" id="8">8</div>
                 <div class="digit" id="9">9</div>
-                <div class="digit" id="digit-0">0</div>
+                <div class="digit" id="0">0</div>
             </div>
             <div id="actions">
                 <div class="action" id="clear">Clear</div>
